# pandoc-server

./: LICENSE  noteloom-pandoc-server.cabal  pandoc-server.cabal
app/: Main.hs
src/: Application.hs  Lib.hs
src/Processor/: Simple.hs
