name:                noteloom-pandoc-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arigoins/noteloom-pandoc-server#readme
license:             BSD3
license-file:        LICENSE
author:              Audarius Goins
maintainer:          aegoins@gmail.com
copyright:           2017 Audarius Goins
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , pandoc-types >= 1.17
                     , pandoc >= 1.19.2.1
  default-language:    Haskell2010

executable noteloom-pandoc-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , noteloom-pandoc-server
  default-language:    Haskell2010

test-suite noteloom-pandoc-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , noteloom-pandoc-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arigoins/noteloom-pandoc-server
